# serializer version: 1
# name: test_all_entities
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.pool_device_time_sync',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Device Time Sync',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
      'original_icon': None,
      'original_name': 'Device Time Sync',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'device_time_out_of_sync',
      'unique_id': 'neopool_1234567890_device time out of sync',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': None,
      'entity_id': 'binary_sensor.pool_filtration_active',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Filtration Active',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
      'original_icon': None,
      'original_name': 'Filtration Active',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'filtration_pump',
      'unique_id': 'neopool_1234567890_filtration pump',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.pool_heating',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Heating',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
      'original_icon': None,
      'original_name': 'Heating',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'heating',
      'unique_id': 'neopool_1234567890_heating',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.pool_hydrolysis_activated_by_redox_module',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Hydrolysis Activated by Redox Module',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
      'original_icon': None,
      'original_name': 'Hydrolysis Activated by Redox Module',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'hidro_activated_by_the_rx_module',
      'unique_id': 'neopool_1234567890_hidro activated by the rx module',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.pool_hydrolysis_chlorine_shock_mode_boost',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Hydrolysis Chlorine Shock Mode (Boost)',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
      'original_icon': None,
      'original_name': 'Hydrolysis Chlorine Shock Mode (Boost)',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'hidro_chlorine_shock_mode',
      'unique_id': 'neopool_1234567890_hidro chlorine shock mode',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.pool_hydrolysis_enabled',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Hydrolysis Enabled',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
      'original_icon': None,
      'original_name': 'Hydrolysis Enabled',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'hidro_module_active',
      'unique_id': 'neopool_1234567890_hidro module active',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.pool_hydrolysis_production_problem',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Hydrolysis Production Problem',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
      'original_icon': None,
      'original_name': 'Hydrolysis Production Problem',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'hidro_low_flow',
      'unique_id': 'neopool_1234567890_hidro low flow',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.pool_hydrolysis_regulation_active',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Hydrolysis Regulation Active',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
      'original_icon': None,
      'original_name': 'Hydrolysis Regulation Active',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'hidro_module_regulated',
      'unique_id': 'neopool_1234567890_hidro module regulated',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.pool_ionizer_on_target',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Ionizer On Target',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Ionizer On Target',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'ion_on_target',
      'unique_id': 'neopool_1234567890_ion on target',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.pool_ionizer_production_problem',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Ionizer Production Problem',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
      'original_icon': None,
      'original_name': 'Ionizer Production Problem',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'ion_low_flow',
      'unique_id': 'neopool_1234567890_ion low flow',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.pool_ionizer_program_time_exceeded',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Ionizer Program Time Exceeded',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
      'original_icon': None,
      'original_name': 'Ionizer Program Time Exceeded',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'ion_program_time_exceeded',
      'unique_id': 'neopool_1234567890_ion program time exceeded',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.pool_ph_acid_pump',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'pH Acid Pump',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
      'original_icon': None,
      'original_name': 'pH Acid Pump',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'ph_acid_pump',
      'unique_id': 'neopool_1234567890_ph acid pump',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.pool_ph_flow_detection_control',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'pH Flow Detection Control',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
      'original_icon': None,
      'original_name': 'pH Flow Detection Control',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'ph_module_control_status',
      'unique_id': 'neopool_1234567890_ph module control status',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.pool_ph_measurement',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'pH Measurement',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
      'original_icon': None,
      'original_name': 'pH Measurement',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'ph_measurement_active',
      'unique_id': 'neopool_1234567890_ph measurement active',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.pool_ph_regulation_active',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'pH Regulation Active',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
      'original_icon': None,
      'original_name': 'pH Regulation Active',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'ph_control_module',
      'unique_id': 'neopool_1234567890_ph control module',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': None,
      'entity_id': 'binary_sensor.pool_pool_cover',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Pool Cover',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.OPENING: 'opening'>,
      'original_icon': None,
      'original_name': 'Pool Cover',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'pool_cover',
      'unique_id': 'neopool_1234567890_pool cover',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': None,
      'entity_id': 'binary_sensor.pool_pool_light',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Pool Light',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.LIGHT: 'light'>,
      'original_icon': None,
      'original_name': 'Pool Light',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'pool_light',
      'unique_id': 'neopool_1234567890_pool light',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.pool_redox_measurement',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Redox Measurement',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
      'original_icon': None,
      'original_name': 'Redox Measurement',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'redox_measurement_active',
      'unique_id': 'neopool_1234567890_redox measurement active',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.pool_redox_pump_active',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Redox Pump Active',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
      'original_icon': None,
      'original_name': 'Redox Pump Active',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'redox_pump_active',
      'unique_id': 'neopool_1234567890_redox pump active',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.pool_redox_regulation_active',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Redox Regulation Active',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
      'original_icon': None,
      'original_name': 'Redox Regulation Active',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'redox_control_module',
      'unique_id': 'neopool_1234567890_redox control module',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': None,
      'entity_id': 'binary_sensor.pool_relay_aux1',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Relay Aux1',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.POWER: 'power'>,
      'original_icon': None,
      'original_name': 'Relay Aux1',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'aux1',
      'unique_id': 'neopool_1234567890_aux1',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': None,
      'entity_id': 'binary_sensor.pool_relay_aux2',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Relay Aux2',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.POWER: 'power'>,
      'original_icon': None,
      'original_name': 'Relay Aux2',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'aux2',
      'unique_id': 'neopool_1234567890_aux2',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': None,
      'entity_id': 'binary_sensor.pool_relay_aux3',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Relay Aux3',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.POWER: 'power'>,
      'original_icon': None,
      'original_name': 'Relay Aux3',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'aux3',
      'unique_id': 'neopool_1234567890_aux3',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': None,
      'entity_id': 'binary_sensor.pool_relay_aux4',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Relay Aux4',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.POWER: 'power'>,
      'original_icon': None,
      'original_name': 'Relay Aux4',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'aux4',
      'unique_id': 'neopool_1234567890_aux4',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.pool_uv_lamp',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'UV Lamp',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
      'original_icon': None,
      'original_name': 'UV Lamp',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'uv_lamp',
      'unique_id': 'neopool_1234567890_uv lamp',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_setup_when_modules_absent
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.pool_device_time_sync',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Device Time Sync',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
      'original_icon': None,
      'original_name': 'Device Time Sync',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'device_time_out_of_sync',
      'unique_id': 'neopool_1234567890_device time out of sync',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': None,
      'entity_id': 'binary_sensor.pool_pool_cover',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Pool Cover',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.OPENING: 'opening'>,
      'original_icon': None,
      'original_name': 'Pool Cover',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'pool_cover',
      'unique_id': 'neopool_1234567890_pool cover',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': None,
      'entity_id': 'binary_sensor.pool_relay_aux1',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Relay Aux1',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.POWER: 'power'>,
      'original_icon': None,
      'original_name': 'Relay Aux1',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'aux1',
      'unique_id': 'neopool_1234567890_aux1',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': None,
      'entity_id': 'binary_sensor.pool_relay_aux2',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Relay Aux2',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.POWER: 'power'>,
      'original_icon': None,
      'original_name': 'Relay Aux2',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'aux2',
      'unique_id': 'neopool_1234567890_aux2',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': None,
      'entity_id': 'binary_sensor.pool_relay_aux3',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Relay Aux3',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.POWER: 'power'>,
      'original_icon': None,
      'original_name': 'Relay Aux3',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'aux3',
      'unique_id': 'neopool_1234567890_aux3',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': None,
      'entity_id': 'binary_sensor.pool_relay_aux4',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Relay Aux4',
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.POWER: 'power'>,
      'original_icon': None,
      'original_name': 'Relay Aux4',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'aux4',
      'unique_id': 'neopool_1234567890_aux4',
      'unit_of_measurement': None,
    }),
  ])
# ---
